This change includes a number of small fixes to resolve issues reported by running findbugs. Below are file by file descriptions of the changes
- connector-manager/source/java/com/google/enterprise/connector/instantiator/InstanceMap.java
  mark typeMap final

  heed return value from File.mkdirs

  heed return value from File.delete

  make inner class static

  consistent synchronization

- connector-manager/source/java/com/google/enterprise/connector/instantiator/ConnectorInterfaces.java
  remove unread instance variables

  remove white space

- connector-manager/source/java/com/google/enterprise/connector/traversal/QueryTraverser.java
  make instance variables final

  Simplify code so findbugs can see that a cast is safe

- connector-manager/source/java/com/google/enterprise/connector/traversal/MimeTypeMap.java
  mark instance variables final

  replace new Integer with Integer.valueOf() 
- connector-manager/source/java/com/google/enterprise/connector/servlet/AuthorizationParser.java
  mark instance variables final

  format

  replace username.equals with id.getUsername().equals to avoid potential NullPointerException

-  connector-manager/source/java/com/google/enterprise/connector/servlet/ServletUtil.java
  enhanced javadoc for replaceSensitiveData
  
  iterated though entrySet rather than keys.

- connector-manager/source/java/com/google/enterprise/connector/servlet/AuthorizationHandler.java
  formatted

  removed unused variable

- connector-manager/source/java/com/google/enterprise/connector/pusher/DocPusher.java
  replaced == with equals

- connector-manager/source/java/com/google/enterprise/connector/monitor/HashMapMonitor.java
  Replaced map that is used in multiple threads with synchronized map (find bugs did not
  report this)

  replaced keySet with Map.entrySet

- connector-manager/source/java/com/google/enterprise/connector/persist/GenerationalStateStore.java
  mark instance varibles final

  replace new Long with Long.valueOf

  add synchronized
